[Refactor] Refactoring specifications and documents
