# src/modules/cars/entities/Specification.ts
@@ -1,18 +1,23 @@
 import { v4 as uuidv4 } from 'uuid';
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 
+@Entity("specifications")
 class Specification {
+  @PrimaryColumn()
   id?: string;
+
+  @Column()
   name: string;
+
+  @Column()
   description: string;
+
+  @CreateDateColumn()
   created_at?: Date;
 
   constructor() {
     if (!this.id) {
       this.id = uuidv4();
-    }
-
-    if (!this.created_at) {
-      this.created_at = new Date();
     }
   }
 };
